--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resize-panel-ts": "0.0.5",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
     "rsuite": "^4.10.1",
