--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-hook/size": "^2.1.1",
+    "@react-hook/throttle": "^2.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,13 +19,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-resize-panel-ts": "0.0.5",
+    "react-router-dom": "^5.2.0",
+    "react-router-query-params": "^1.0.4",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
     "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
+    "use-clipboard-copy": "^0.2.0",
+    "use-d3-transition": "^1.2.0",
+    "use-route-as-state": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "prod": "npm run build && serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -50,8 +57,10 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
