--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "alasql": "^1.7.2",
+    "copy-text-to-clipboard": "^3.0.1",
     "d3": "^6.7.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
