--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "alasql": "^1.7.2",
-    "copy-text-to-clipboard": "^3.0.1",
+    "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -24,7 +24,6 @@
     "recoil": "^0.3.1",
     "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
-    "use-clipboard-copy": "^0.2.0",
     "use-d3-transition": "^1.2.0",
     "use-route-as-state": "^4.1.0",
     "web-vitals": "^1.1.2"
