--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.5",
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
+    "fraction.js": "^4.2.0",
     "lodash": "^4.17.21",
     "raw.macro": "^0.6.2",
     "react": "^17.0.2",
