--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@types/d3": "^6.7.0",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
     "fraction.js": "^4.2.0",
     "lodash": "^4.17.21",
     "raw.macro": "^0.6.2",
     "react": "^17.0.2",
+    "react-debounce-render": "^8.0.2",
     "react-dom": "^17.0.2",
     "react-resize-panel-ts": "0.0.5",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.6",
     "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
