--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/react-syntax-highlighter": "^15.5.6",
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
+    "esbuild-plugin-alias": "^0.2.1",
     "fraction.js": "^4.2.0",
+    "http-server": "^14.1.1",
     "lodash": "^4.17.21",
+    "preact": "^10.13.0",
     "raw.macro": "^0.6.2",
     "react": "^17.0.2",
     "react-debounce-render": "^8.0.2",
@@ -32,11 +35,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "prod": "npm run build && serve -s build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "NODE_ENV=development node script/build.mjs & http-server -c-1 dist & wait",
+    "start-prod": "NODE_ENV=production node script/build.mjs & http-server -c-1 dist & wait",
+    "build": "NODE_ENV=production node script/build.mjs",
+    "check-types": "tsc --noEmit",
+    "upgrade": "npx npm-check -u",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -60,6 +63,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "esbuild": "^0.17.11",
     "gh-pages": "^3.2.3"
   },
   "overrides": {
