--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@preact/signals": "^1.1.3",
     "@react-hook/size": "^2.1.1",
     "@types/d3": "^6.7.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
@@ -21,7 +22,7 @@
     "esbuild-plugin-alias": "^0.2.1",
     "fraction.js": "^4.2.0",
     "http-server": "^14.1.1",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "preact": "^10.13.0",
     "raw.macro": "^0.6.2",
     "react": "^17.0.2",
@@ -62,7 +63,6 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170",
     "esbuild": "^0.17.11",
     "gh-pages": "^3.2.3"
   },
