--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
     "esbuild-plugin-alias": "^0.2.1",
+    "fast-deep-equal": "^3.1.3",
     "fraction.js": "^4.2.0",
     "http-server": "^14.1.1",
+    "jotai": "^2.0.3",
     "lodash-es": "^4.17.21",
     "preact": "^10.13.0",
     "raw.macro": "^0.6.2",
@@ -30,7 +32,6 @@
     "react-resize-panel-ts": "0.0.5",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.6",
     "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
