--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
     "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-less": "^1.1.12",
     "fast-deep-equal": "^3.1.3",
     "fraction.js": "^4.2.0",
     "http-server": "^14.1.1",
