--- a/package.json
+++ b/package.json
@@ -12,31 +12,36 @@
   "dependencies": {
     "@react-hook/size": "^2.1.1",
     "@types/d3": "^6.7.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
+    "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-less": "^1.1.12",
+    "fast-deep-equal": "^3.1.3",
     "fraction.js": "^4.2.0",
-    "lodash": "^4.17.21",
+    "http-server": "^14.1.1",
+    "jotai": "^2.0.3",
+    "lodash-es": "^4.17.21",
+    "preact": "^10.13.0",
     "raw.macro": "^0.6.2",
     "react": "^17.0.2",
     "react-debounce-render": "^8.0.2",
     "react-dom": "^17.0.2",
-    "react-resize-panel-ts": "0.0.5",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.6",
     "rsuite": "^4.10.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "prod": "npm run build && serve -s build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "NODE_ENV=development node script/build.mjs & http-server -c-1 dist & wait",
+    "start-prod": "NODE_ENV=production node script/build.mjs & http-server -c-1 dist & wait",
+    "build": "NODE_ENV=production node script/build.mjs",
+    "check-types": "tsc --noEmit",
+    "upgrade": "npx npm-check -u",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -60,6 +65,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
+    "esbuild": "^0.17.11",
     "gh-pages": "^3.2.3"
   },
   "overrides": {
