--- a/package.json
+++ b/package.json
@@ -10,31 +10,19 @@
     "url": "https://github.com/dbuezas/arduino-web-timers/"
   },
   "dependencies": {
-    "@react-hook/size": "^2.1.1",
-    "@types/d3": "^6.7.0",
-    "@types/lodash-es": "^4.17.6",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-syntax-highlighter": "^15.5.6",
     "copy-to-clipboard": "^3.3.1",
     "d3": "^6.7.0",
     "esbuild-plugin-alias": "^0.2.1",
     "esbuild-plugin-less": "^1.1.13",
-    "fast-deep-equal": "^3.1.3",
     "fraction.js": "^4.2.0",
-    "http-server": "^14.1.1",
     "jotai": "^2.0.3",
     "lodash-es": "^4.17.21",
     "preact": "^10.13.1",
     "raw.macro": "^0.7.0",
-    "react": "^17.0.2",
-    "react-debounce-render": "^8.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "rsuite": "^4.10.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^1.1.2"
+    "@react-hook/size": "^2.1.1",
+    "esbuild": "^0.17.11"
   },
   "scripts": {
     "start": "NODE_ENV=development WATCH=1 node script/build.mjs",
@@ -64,9 +52,18 @@
     ]
   },
   "devDependencies": {
+    "typescript": "^4.9.5",
     "@types/lodash": "^4.14.170",
-    "esbuild": "^0.17.11",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "@types/d3": "^6.7.0",
+    "@types/lodash-es": "^4.17.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "react": "^17.0.2",
+    "react-debounce-render": "^8.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   },
   "overrides": {
     "react-virtualized": {
